--- a/.github/workflows/Build AzerothCore Linux.yml
+++ b/.github/workflows/Build AzerothCore Linux.yml
@@ -38,21 +38,11 @@ jobs:
         run: |
           sudo apt update -y
           sudo apt install -y \
-            git cmake make clang ccache \  # 新增ccache加速编译
+            git cmake make clang \
             libmysqlclient-dev libssl-dev \
             libbz2-dev libreadline-dev libncurses-dev \
             libboost-all-dev libcurl4-openssl-dev
           sudo apt clean  # 清理缓存减少磁盘占用
-
-      - name: 缓存编译文件
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.ccache
-            ${{ env.BUILD_DIR }}
-          key: ${{ runner.os }}-acore-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-acore-
 
       - name: 生成时间戳
         id: ts
